# reviewgraph

./: .gitignore  AGENTS.md  ISSUE_PLAN.md  MILESTONE_PLAN.md  README.md  pyproject.toml
docs/: README.md
docs/architecture/: findings-contract.md  github-integration.md  llm-data-handling.md  overview.md  review-quality.md  reviewer-config.md  side-effects.md  state-graph.md
docs/decisions/: 0001-dry-run-first.md  0002-langgraph-staged-review.md  0003-codex-review-quality-reference.md  0004-linear-backlog-docs-are-contracts.md  0005-inert-reviewer-tool-metadata.md  0006-passive-memory-metadata-only.md  0007-required-reviewer-fail-closed-state.md  0008-finalization-owns-writer-release.md  0009-live-llm-explicit-opt-in.md  README.md
docs/harnesses/: harness-engineering.md
docs/implementation/: README.md
docs/operations/: README.md
docs/plans/: implementation-plan.md
docs/prds/: 0001-north-star.md  0002-mvp-tracer-bullet.md  0003-contracts.md  0004-graph-orchestration.md  0005-review-quality.md  0006-github-read-memory.md  0007-side-effects.md  0008-live-llm.md  0009-harness-strategy.md  0010-agent-context-and-adapter-boundaries.md  README.md
examples/: review_agents.example.yaml
scripts/: check_docs.py
tests/: conftest.py  test_actor_permission_binding.py  test_adapter_boundaries.py  test_approval.py  test_clarification.py  test_clarification_resume.py  test_cli.py  test_config.py  test_context_budget.py  test_contract_boundaries.py  test_conversation_routing.py  test_diff_anchor.py  test_fake_writer.py  test_findings.py  test_fixture_manifest.py  test_fixtures.py  test_github_dry_run_cli.py  test_github_fake_read.py  test_github_memory_trust.py  test_github_pagination.py  test_github_read_gaps.py  test_github_writer.py  test_graph_empty.py  test_live_llm_adapter.py  test_live_post_contract.py  test_live_read_smoke.py  test_llm_policy.py  test_marker_hardening.py  test_markers.py  test_memory.py  test_models.py  test_no_approved_findings.py  test_non_interactive_posting.py  test_optional_reviewer_failure.py  test_payload_hashes.py  test_payload_validation.py  test_permissions.py  test_post_mode_graph.py  test_posting.py  test_prompt_injection_memory.py  (+17 more)
(+65 files in other folders)
