[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "reviewgraph"
version = "0.0.0"
description = "LangGraph-powered PR review orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
reviewgraph = "reviewgraph.cli:main"

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
reviewgraph = ["fixtures_data/**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
