[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "reviewgraph"
version = "0.0.0"
description = "LangGraph-powered PR review orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["langgraph>=0.6,<1", "PyYAML>=6"]

[project.scripts]
reviewgraph = "reviewgraph.cli:main"

[project.optional-dependencies]
test = ["pytest>=8", "ruff==0.15.12"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
reviewgraph = ["fixtures_data/**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "live_read: opt-in read-only GitHub live smoke tests skipped unless REVIEWGRAPH_LIVE_READ=1",
    "live_llm: opt-in live LLM smoke tests skipped unless REVIEWGRAPH_LIVE_LLM=1",
    "live_post: manual opt-in disposable PR GitHub post smoke tests skipped unless REVIEWGRAPH_LIVE_POST=1",
]

[tool.ruff]
target-version = "py311"
required-version = "==0.15.12"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "C901"]
mccabe.max-complexity = 30
